# Python_Piscine_42

./: README.md
module00/ex6/: ft_garden_summary.py
module01/ex1/: ft_garden_data.py
module01/ex2/: ft_plant_growth.py
module01/ex6/: ft_garden_analytics.py
module02/ex0/: ft_first_exception.py
module02/ex3/: ft_finally_block.py
module03/ex1/: ft_score_analytics.py
module03/ex2/: ft_coordinate_system.py
module03/ex3/: ft_achievement_tracker.py
module03/ex4/: ft_inventory_system.py
module03/ex5/: ft_data_stream.py
module04/ex1/: ft_archive_creation.py
module04/ex2/: ft_stream_management.py
module04/ex3/: ft_vault_security.py
module04/ex4/: ft_crisis_response.py
module05/ex0/: stream_processor.py
module06/: ft_import_transmutation.py
module07/ex0/: main.py
module07/ex1/: ArtifactCard.py
module07/ex2/: Combatable.py
module07/ex3/: AggressiveStrategy.py  GameEngine.py  main.py
module07/ex4/: Rankable.py  TournamentPlatform.py  main.py
module08/ex0/: construct.py
module08/ex02/: .env.example  .gitignore  oracle.py
module10/ex0/: lambda_spells.py
module10/ex3/: functools_artifacts.py
py_module00/ex2/: ft_harvest_total.py
py_module00/ex5/: ft_count_harvest_recursive.py
py_modulo01/ex0/: ft_garden_intro.py
py_modulo01/ex3/: ft_plant_factory.py
py_modulo01/ex4/: ft_garden_security.py
py_modulo01/ex5/: ft_plant_types.py
py_modulo02/ex1/: ft_different_errors.py
py_modulo06/: ft_circular_curse.py  ft_pathway_debate.py  ft_sacred_scroll.py
py_modulo07/: __init__.py
py_modulo08/ex01/: loading.py  pyproject.toml
(+34 files in other folders)
