[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Exercise 01: Loading Programs"
authors = ["Pedro Lellis <pedrohlellis88@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "*"
numpy = "*"
matplotlib = "*"
requests = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
